primeros cambios para la tercer pre entrega

--- a/pages/calzados.html
+++ b/pages/calzados.html
@@ -4,122 +4,164 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calzados</title>
-    <link rel="stylesheet" href="./../assets/styles/style.css" /> 
+    <link rel="stylesheet" href="./../assets/styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
   </head>
   <body class="calzado">
     <header class="header">
       <h1 class="titulo-calzado">Calzados</h1>
     </header>
-    <nav class="nav-calzado">
-      <ul>
-        <li><a href="./../index.html">Inicio</a></li>
-        <li><a href="./accesorios.html">Accesorios</a></li>
-        <li><a href="./nosotros.html">Sobre Nosotros</a></li>
-        <li><a href="./contacto.html">Contacto</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./accesorios.html">Accesorios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./nosotros.html">Sobre Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
-    <main >
+    <main>
       <nav class="catalogo">
         <h2>Calzado Deportivo</h2>
-      <ul class="zapatos">
-        <li>
-          <img class="uno"
-          src="./../assets/multimedia/calzado-deportivo-1.jpg"
-          alt="Calzado"
-          />
-        </li>
-        <li>
-          <img class="dos"
+        <ul class="zapatos">
+          <li>
+            <img
+              class="uno"
+              src="./../assets/multimedia/calzado-deportivo-1.jpg"
+              alt="Calzado"
+            />
+          </li>
+          <li>
+            <img
+              class="dos"
               src="./../assets/multimedia/calzado-deportivo-2.jpg"
               alt="Calzado"
             />
           </li>
           <li>
-            <img class="tres"
+            <img
+              class="tres"
               src="./../assets/multimedia/calzado-deportivo-3.jpg"
               alt="Calzado"
             />
           </li>
           <li>
-            <img class="cuatro"
+            <img
+              class="cuatro"
               src="./../assets/multimedia/calzado-deportivo-4.jpg"
               alt="Calzado"
             />
           </li>
           <li>
-            <img class="cinco"
+            <img
+              class="cinco"
               src="./../assets/multimedia/calzado-deportivo-5.jpg"
               alt="Calzado"
-              />
-            </li>
-          </ul>
-          <h2>Calzado Casual</h2>
+            />
+          </li>
+        </ul>
+        <h2>Calzado Casual</h2>
         <ul>
           <li>
-            <img class="c1"
-            src="./../assets/multimedia/calzado-casual-1.jpg"
-            alt="Calzado"
-            />
-          </li>
-          <li>
-            <img class="c2"
-            src="./../assets/multimedia/calzado-casual-2.jpg"
-            alt="Calzado"
-            />
-          </li>
-          <li>
-            <img class="c3"
-            src="./../assets/multimedia/calzado-casual-3.jpg"
-            alt="Calzado"
-            />
-          </li>
-          <li>
-            <img class="c4"
-            src="./../assets/multimedia/calzado-casual-4.jpg"
+            <img
+              class="c1"
+              src="./../assets/multimedia/calzado-casual-1.jpg"
               alt="Calzado"
-              />
-            </li>
-            <li>
-              <img class="c5"
+            />
+          </li>
+          <li>
+            <img
+              class="c2"
+              src="./../assets/multimedia/calzado-casual-2.jpg"
+              alt="Calzado"
+            />
+          </li>
+          <li>
+            <img
+              class="c3"
+              src="./../assets/multimedia/calzado-casual-3.jpg"
+              alt="Calzado"
+            />
+          </li>
+          <li>
+            <img
+              class="c4"
+              src="./../assets/multimedia/calzado-casual-4.jpg"
+              alt="Calzado"
+            />
+          </li>
+          <li>
+            <img
+              class="c5"
               src="./../assets/multimedia/calzado-casual-5.jpg"
               alt="Calzado"
-              />
-            </li>
-          </ul>
-          <h2>Calzado Fútbol</h2>
-          <ul>
-            <li>
-              <img class="f1"
+            />
+          </li>
+        </ul>
+        <h2>Calzado Fútbol</h2>
+        <ul>
+          <li>
+            <img
+              class="f1"
               src="./../assets/multimedia/calzado-futbol-1.jpg"
               alt="Calzado"
             />
           </li>
           <li>
-            <img class="f2"
+            <img
+              class="f2"
               src="./../assets/multimedia/calzado-futbol-2.jpg"
               alt="Calzado"
-              />
-            </li>
-            <li>
-              <img class="f3"
-              src="./../assets/multimedia/calzado-futbol-3.jpg"
-              alt="Calzado"
-              />
-            </li>
-            <li>
-              <img class="f4"
-              src="./../assets/multimedia/calzado-futbol-4.jpg"
-              alt="Calzado"
-              />
+            />
           </li>
           <li>
-            <img class="f5"
-            src="./../assets/multimedia/calzado-futbol-5.jpg"
-            alt="Calzado"
+            <img
+              class="f3"
+              src="./../assets/multimedia/calzado-futbol-3.jpg"
+              alt="Calzado"
+            />
+          </li>
+          <li>
+            <img
+              class="f4"
+              src="./../assets/multimedia/calzado-futbol-4.jpg"
+              alt="Calzado"
+            />
+          </li>
+          <li>
+            <img
+              class="f5"
+              src="./../assets/multimedia/calzado-futbol-5.jpg"
+              alt="Calzado"
             />
           </li>
         </ul>
-      </nav>  
+      </nav>
     </main>
     <footer class="footer">
       <ul class="fb">
@@ -140,5 +182,19 @@
         </li>
       </ul>
     </footer>
+    <script>
+      src =
+        "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
