--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -5,17 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesorios</title>
     <link rel="stylesheet" href="./../assets/styles/style.css">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body class="accesorios">
-   <header class="header"> <h1 class="accesorios">Accesorios</h1>
-   </header>
-   <nav class="nav-accesorios"> <ul> 
-        <li> <a href="./../index.html">Inicio</a></li>
-        <li>  <a href="./calzados.html">Calzados</a></li>
-        <li> <a href="./nosotros.html">Sobre Nosotros</a></li>
-         <li> <a href="./contacto.html">Contacto</a></li>
-   </ul></nav>
+  <header class="header">
+    <a class="navbar-brand" href="./index.html"
+      ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
+      /></a>
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  </header>
+  <div><h1 class="accesorios">Accesorios</h1></div>
+  <nav class="navbar navbar-expand-lg">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="container-fluid">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./calzados.html">Calzados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./nosotros.html">Sobre Nosotros</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <main>
   <h2 class="titulo-gorra">Gorras</h2>
   <nav>
@@ -46,5 +77,19 @@
         
       </ul>
    </footer>
+   <script>
+    src =
+      "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
+  </script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"
+  ></script>
 </body>
 </html>
