--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,14 +11,37 @@
     <header>
         <h1 class="nosotros">Sobre Nosotros</h1>
     </header>
-     <nav>
-
-     <ul><li> <a href="./../index.html">Inicio</a></li>
-        <li>  <a href="./calzados.html">Calzados</a></li>
-        <li> <a href="./accesorios.html">Accesorios</a></li>
-        <li> <a href="./contacto.html">Contacto</a></li>   
-      </ul>
-     </nav>
+    <nav class="navbar navbar-expand-lg">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./calzados.html">Calzados</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./accesorios.html">Accesorios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
      <div class="somos">
          <h2>Somos una tienda online la cual se dedica a vender calzado deportivo,casual,de fútbol y accesorios en general.</h2>
        </div>           
@@ -55,5 +78,19 @@
         </li>
       </ul>
 </footer>
+<script>
+  src =
+    "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
+</script>
+<script
+  src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+  integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+  integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+  crossorigin="anonymous"
+></script>
 </body>
 </html>
