cambios de logo

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -13,7 +13,6 @@
       ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
       /></a>
       <span class="navbar-toggler-icon"></span>
-    </button>
   </header>
   <div><h1 class="accesorios">Accesorios</h1></div>
   <nav class="navbar navbar-expand-lg">
@@ -51,12 +50,41 @@
   <h2 class="titulo-gorra">Gorras</h2>
   <nav>
     <ul>
-            <li><img class="g1" src="./../assets/multimedia/accesorios/gorra-1.jpg" alt="Gorra"></li>
-            <li><img class="g2" src="./../assets/multimedia/accesorios/gorra-2.jpg" alt="Gorra"></li>
-            <li><img class="g3" src="./../assets/multimedia/accesorios/gorra-3.jpg" alt="Gorra"></li>
-            <li><img class="g4" src="./../assets/multimedia/accesorios/gorra-4.webp" alt="Gorra"></li>
-            <li><img class="g5" src="./../assets/multimedia/accesorios/gorra-5.jpg" alt="Gorra"></li>
-            
+      <li><div class="card" style="width: 18rem;">
+        <img src="./../assets/multimedia/accesorios/gorra-1.jpg" class="card-img-top" alt="Gorra">
+        <div class="card-body">
+          <h5 class="card-title">Gorra New York Roja</h5>
+          <p class="card-text">Composición: 65% algodón
+            Equipo: new york yankees Liga de deporte: MLB</p>
+        </div>
+      </div></li>
+      <li><div class="card" style="width: 18rem;">
+        <img src="./../assets/multimedia/accesorios/gorra-2.jpg" class="card-img-top" alt="Gorra">
+        <div class="card-body">
+          <h5 class="card-title">Gorra Simple</h5>
+          <p class="card-text">Gorra simple con malla, unico talle, se ajusta facilmente</p>
+        </div>
+      </div></li>
+      <li><div class="card" style="width: 18rem;">
+        <img src="./../assets/multimedia/accesorios/gorra-3.jpg" class="card-img-top" alt="Gorra">
+        <div class="card-body">
+          <h5 class="card-title">Gorra Addidas con Malla</h5>
+          <p class="card-text">Gorra Addidas con malla, ajustable y en mas de 5 colores</p>
+        </div>
+      </div></li>
+      <li><div class="card" style="width: 18rem;">
+        <img src="./../assets/multimedia/accesorios/gorra-4.webp" class="card-img-top" alt="Gorra">
+        <div class="card-body">
+          <h5 class="card-title">Gorras de Coleccion</h5>
+          <p class="card-text">Gorras Especiales de coleccion, distintos modelos y con una historia detras</p>
+        </div>
+      </div></li>
+      <li><div class="card" style="width: 18rem;">
+        <img src="./../assets/multimedia/accesorios/gorra-5.jpg" class="card-img-top" alt="Gorra">
+        <div class="card-body">
+          <h5 class="card-title">Gorra New York Edicion Especial</h5>
+          <p class="card-text">Composición: 65% algodón, solo se hicieron 1.000 de este color</p>
+        </div>
         </ul>
     </nav>
 </main>
