--- a/pages/calzados.html
+++ b/pages/calzados.html
@@ -12,8 +12,16 @@
   </head>
   <body class="calzado">
     <header class="header">
-      <h1 class="titulo-calzado">Calzados</h1>
+      <header class="header">
+        <a class="navbar-brand" href="./index.html"
+          ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
+          /></a>
+          <span class="navbar-toggler-icon"></span>
+      </header>
     </header>
+    <div>
+      <h1 class="titulo-calzado">Calzados</h1>
+    </div>
     <nav class="navbar navbar-expand-lg">
       <button
         class="navbar-toggler"
