--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacto</title>
     <link rel="stylesheet" href="./../assets/styles/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
   </head>
-  <body >
-    <header><h1 class="contacto">Contacto</h1></header>
+  <body class="contacto">
+    <header><header class="header">
+      <a class="navbar-brand" href="./index.html"
+        ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
+        /></a>
+        <span class="navbar-toggler-icon"></span>
+    </header></header>
+    <div><h1 class="contacto">Contacto</h1></div>
     <nav class="navbar navbar-expand-lg">
       <button
         class="navbar-toggler"
@@ -58,9 +67,10 @@
           ></textarea>
           <input class="btn" type="submit" value="Enviar" />
         </div>
-      </form>  
+      </form>
     </main>
-    <footer><ul class="fb">
+    <footer>
+      <ul class="fb">
         <li class="fb">
           <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
             <img
@@ -70,23 +80,27 @@
           </a>
         </li>
         <li>
-          <a href="https://www.instagram.com/" target="_blank"><img src="./../assets/multimedia/logos/instagram.png" alt="instagram"></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><img
+              src="./../assets/multimedia/logos/instagram.png"
+              alt="instagram"
+          /></a>
         </li>
-        
-      </ul></footer>
-      <script>
-        src =
-          "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
-      </script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-      ></script>
-      <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-      ></script>
+      </ul>
+    </footer>
+    <script>
+      src =
+        "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js";
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
