--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="./../assets/styles/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
  </head>
-<body>
-    <header>
-        <h1 class="nosotros">Sobre Nosotros</h1>
-    </header>
+<body class="somos">
+      <header class="header">
+        <a class="navbar-brand" href="./index.html"
+          ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
+          /></a>
+          <span class="navbar-toggler-icon"></span>
+      </header>
+    <div><h1 class="nosotros">Sobre Nosotros</h1></div>
     <nav class="navbar navbar-expand-lg">
       <button
         class="navbar-toggler"
@@ -42,7 +46,7 @@
         </div>
       </div>
     </nav>
-     <div class="somos">
+     <div class="somos-description">
          <h2>Somos una tienda online la cual se dedica a vender calzado deportivo,casual,de fútbol y accesorios en general.</h2>
        </div>           
     <main class="mision"> 
