--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -9,7 +9,7 @@
 </head>
 <body class="accesorios">
   <header class="header">
-    <a class="navbar-brand" href="./index.html"
+    <a class="navbar-brand" href="./../index.html"
       ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
       /></a>
       <span class="navbar-toggler-icon"></span>
