--- a/pages/calzados.html
+++ b/pages/calzados.html
@@ -13,7 +13,7 @@
   <body class="calzado">
     <header class="header">
       <header class="header">
-        <a class="navbar-brand" href="./index.html"
+        <a class="navbar-brand" href="./../index.html"
           ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
           /></a>
           <span class="navbar-toggler-icon"></span>
