--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
   </head>
   <body class="contacto">
     <header><header class="header">
-      <a class="navbar-brand" href="./index.html"
+      <a class="navbar-brand" href="./../index.html"
         ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
         /></a>
         <span class="navbar-toggler-icon"></span>
