--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -67,7 +67,7 @@
         <p>Para nosotros como empresa es muy importante mantenernos firmes con la responsabilidad,honestidad hacia el cliente,calidad en los productos y que nuestros clientes puedan tener una buena experiencia.</p></div>
       </div>
     </main>
-<footer>
+<footer class="footer">
     <ul class="fb">
         <li class="fb">
           <a href="https://www.facebook.com/?locale=es_LA" target="_blank">
