--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
+    <meta
+      name="description"
+      content="Somos una tienda online la cual se dedica a vender calzado deportivo,casual,de fútbol y accesorios en general.Para nosotros como empresa es muy importante mantenernos firmes con la responsabilidad,honestidad hacia el cliente,calidad en los productos y que nuestros clientes puedan tener una buena experiencia."
+    />
+    <meta name="keywords" content="Calzado,shop,gorra,enigma">
   </head>
   <body>
     <header>
       <a class="navbar-brand" href="./index.html"
         ><img class="logo" src="./assets/logo/Logo.png" alt="logo"
-        /></a>
-        <span class="navbar-toggler-icon"></span>
+      /></a>
+      <span class="navbar-toggler-icon"></span>
     </header>
     <nav class="navbar navbar-expand-lg">
       <button
@@ -25,7 +30,8 @@
         data-bs-target="#navbarNav"
         aria-controls="navbarNav"
         aria-expanded="false"
-        aria-label="Toggle navigation">
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="container-fluid">
