--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -50,7 +50,7 @@
   <h2 class="titulo-gorra">Gorras</h2>
   <nav>
     <ul>
-      <li><div class="card" style="width: 18rem;">
+      <li><div class="card" style="width: 20rem; height: 70vh;">
         <img src="./../assets/multimedia/accesorios/gorra-1.jpg" class="card-img-top" alt="Gorra">
         <div class="card-body">
           <h5 class="card-title">Gorra New York Roja</h5>
@@ -58,28 +58,28 @@
             Equipo: new york yankees Liga de deporte: MLB</p>
         </div>
       </div></li>
-      <li><div class="card" style="width: 18rem;">
+      <li><div class="card" style="width: 20rem; height: 70vh;">
         <img src="./../assets/multimedia/accesorios/gorra-2.jpg" class="card-img-top" alt="Gorra">
         <div class="card-body">
           <h5 class="card-title">Gorra Simple</h5>
           <p class="card-text">Gorra simple con malla, unico talle, se ajusta facilmente</p>
         </div>
       </div></li>
-      <li><div class="card" style="width: 18rem;">
+      <li><div class="card" style="width: 20rem; height: 70vh;">
         <img src="./../assets/multimedia/accesorios/gorra-3.jpg" class="card-img-top" alt="Gorra">
         <div class="card-body">
           <h5 class="card-title">Gorra Addidas con Malla</h5>
           <p class="card-text">Gorra Addidas con malla, ajustable y en mas de 5 colores</p>
         </div>
       </div></li>
-      <li><div class="card" style="width: 18rem;">
+      <li><div class="card" style="width: 20rem; height: 70vh;">
         <img src="./../assets/multimedia/accesorios/gorra-4.webp" class="card-img-top" alt="Gorra">
         <div class="card-body">
           <h5 class="card-title">Gorras de Coleccion</h5>
           <p class="card-text">Gorras Especiales de coleccion, distintos modelos y con una historia detras</p>
         </div>
       </div></li>
-      <li><div class="card" style="width: 18rem;">
+      <li><div class="card" style="width: 20rem; height: 70vh;">
         <img src="./../assets/multimedia/accesorios/gorra-5.jpg" class="card-img-top" alt="Gorra">
         <div class="card-body">
           <h5 class="card-title">Gorra New York Edicion Especial</h5>
@@ -102,7 +102,6 @@
         <li>
           <a href="https://www.instagram.com/" target="_blank"><img src="./../assets/multimedia/logos/instagram.png" alt="instagram"></a>
         </li>
-        
       </ul>
    </footer>
    <script>
