--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,12 +11,14 @@
     />
   </head>
   <body class="contacto">
-    <header><header class="header">
-      <a class="navbar-brand" href="./../index.html"
-        ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
+    <header>
+      <header class="header">
+        <a class="navbar-brand" href="./../index.html"
+          ><img class="logo" src=".././assets/logo/Logo.png" alt="logo"
         /></a>
         <span class="navbar-toggler-icon"></span>
-    </header></header>
+      </header>
+    </header>
     <div><h1 class="contacto">Contacto</h1></div>
     <nav class="navbar navbar-expand-lg">
       <button
