--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       name="description"
       content="Somos una tienda online la cual se dedica a vender calzado deportivo,casual,de fútbol y accesorios en general.Para nosotros como empresa es muy importante mantenernos firmes con la responsabilidad,honestidad hacia el cliente,calidad en los productos y que nuestros clientes puedan tener una buena experiencia."
     />
-    <meta name="keywords" content="Calzado,shop,gorra,enigma">
+    <meta name="keywords" content="Calzado,shop,gorra,enigma" />
   </head>
   <body>
     <header>
