--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="Calzado,shop,gorra,enigma" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <a class="navbar-brand" href="./index.html"
         ><img class="logo" src="./assets/logo/Logo.png" alt="logo"
       /></a>
